--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "mar-design-system",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "private": false,
   "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "style": "dist/index.css",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "start": "vite",
-    "build": "tsc -b && vite build",
+    "build": "rollup -c",
     "lint": "eslint .",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "preview": "vite preview",
@@ -14,19 +21,22 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
     "i18next": "^23.15.0",
     "luxon": "^3.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-i18next": "^15.0.1",
-    "sass": "1.77.8"
+    "sass": "^1.97.3"
+  },
+  "peerDependencies": {
+    "react": ">=18.3.1",
+    "react-dom": ">=18.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.10.0",
+    "@rollup/plugin-commonjs": "^29.0.0",
+    "@rollup/plugin-node-resolve": "^16.0.3",
     "@storybook/addon-essentials": "^8.2.9",
     "@storybook/addon-interactions": "^8.2.9",
     "@storybook/addon-links": "^8.2.9",
@@ -47,25 +57,15 @@
     "globals": "^15.9.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "postcss": "^8.4.45",
+    "postcss": "^8.5.6",
     "prettier": "^3.3.3",
+    "rollup": "^4.57.1",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
     "storybook": "^8.2.9",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.6.0",
     "vite": "^5.4.1"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "prettier --write"
-    ],
-    "*.css": [
-      "prettier --write"
-    ]
   }
 }
