--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,19 +3,18 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "skipLibCheck": true,
 
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": false,
-    "isolatedModules": true,
-    "moduleDetection": "force",
-    "noEmit": false,
+    "module": "ESNext",
+    "moduleResolution": "node",
+
     "jsx": "react-jsx",
 
-    /* Linting */
     "strict": true,
+    "skipLibCheck": true,
+
+    "noEmit": false,
+    "isolatedModules": false,
+
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
