--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,28 +3,21 @@
     "target": "es2015",
     "lib": ["dom", "dom.iterable", "esnext"],
     "downlevelIteration": true,
-
-    "strict": true,
+    "allowJs": true,
     "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
-
+    "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-
-    "jsx": "react-jsx",
-
-    "declaration": true,
-    "declarationDir": "dist",
-    "emitDeclarationOnly": false,
+    "isolatedModules": true,
     "noEmit": false,
-
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "jsx": "react-jsx"
   },
 
-  "include": ["src"],
-
-  // 🔥 ESTO ES EL FIX
-  "exclude": ["**/*.stories.ts", "**/*.stories.tsx", "**/*.test.ts", "**/*.test.tsx"]
+  "include": ["src"]
 }
