--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mar-design-system",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "private": false,
   "type": "module",
   "main": "dist/index.js",
@@ -28,8 +28,7 @@
   },
   "peerDependencies": {
     "react": ">=18.3.1",
-    "react-dom": ">=18.3.1",
-    "react/jsx-runtime": ">=18.3.1"
+    "react-dom": ">=18.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
