--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mar-design-system",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "private": false,
   "type": "module",
   "main": "dist/index.js",
@@ -10,6 +10,13 @@
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "start": "vite",
     "build": "rm -rf dist && rollup -c",
@@ -66,6 +73,7 @@
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.6.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-lib-inject-css": "^2.2.2"
   }
 }
