--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mar-design-system",
-  "version": "0.1.14",
+  "version": "0.1.15",
   "private": false,
   "type": "module",
   "main": "dist/index.js",
@@ -67,6 +67,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.3.3",
     "rollup": "^4.57.1",
+    "rollup-plugin-dts": "^6.3.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "storybook": "^8.2.9",
